apps/headscale/components/headplane/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headplane
spec:
  selector:
    app.kubernetes.io/name: headplane
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
